WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39561
[GTK] HTML5 input type=range is not drawn
https://bugs.webkit.org/show_bug.cgi?id=39561
Summary
[GTK] HTML5 input type=range is not drawn
Martin Robinson
Reported
2010-05-23 00:28:28 PDT
Input type=range is not drawn. All that is required is to activate theme drawing code for this widget. I've attached a proposed patch. I'm not putting this up for review yet, because there are still issues: some tests fail because because of what seem like theme-dependent sizing issues. I'm looking for input on why this might be happening.
Attachments
Functional patch
(5.31 KB, patch)
2010-05-23 00:30 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch
(16.71 KB, patch)
2010-06-07 14:54 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Slider support (correcting typos in the ChangeLog)
(16.71 KB, patch)
2010-06-07 14:56 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-05-23 00:30:01 PDT
Created
attachment 56813
[details]
Functional patch
Martin Robinson
Comment 2
2010-06-07 14:54:44 PDT
Created
attachment 58088
[details]
Patch
Martin Robinson
Comment 3
2010-06-07 14:56:26 PDT
Created
attachment 58089
[details]
Slider support (correcting typos in the ChangeLog)
Oliver Hunt
Comment 4
2010-06-07 15:04:30 PDT
Comment on
attachment 58089
[details]
Slider support (correcting typos in the ChangeLog) r=me
Martin Robinson
Comment 5
2010-06-07 15:46:16 PDT
Committed
r60805
: <
http://trac.webkit.org/changeset/60805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug