WebCore/platform/gtk/RenderThemeGtk.cpp
@@ -213,6 +213,8 @@ static bool supportsFocus(ControlPart appearance)
     case MenulistPart:
     case RadioPart:
     case CheckboxPart:
+    case SliderHorizontalPart:
+    case SliderVerticalPart:
         return true;
     default:
         return false;
@@ -275,7 +277,7 @@ static void adjustMozillaStyle(const RenderThemeGtk* theme, RenderStyle* style, 
     style->setPaddingBottom(Length(ypadding + bottom, Fixed));
 }
 
-static void setMozillaState(const RenderTheme* theme, GtkWidgetState* state, RenderObject* o)
+static void setMozillaState(const RenderTheme* theme, GtkThemeWidgetType type, RenderObject* o, GtkWidgetState* state)
 {
     state->active = theme->isPressed(o);
     state->focused = theme->isFocused(o);
@@ -284,7 +286,15 @@ static void setMozillaState(const RenderTheme* theme, GtkWidgetState* state, Ren
     state->disabled = !theme->isEnabled(o) || theme->isReadOnlyControl(o);
     state->isDefault = false;
     state->canDefault = false;
-    state->depressed = false;
+
+
+    // FIXME: The depressed value should probably apply for other theme parts too.
+    // It must be used for range thumbs, because otherwise when the thumb is pressed,
+    // the rendering is incorrect.
+    if (type == MOZ_GTK_SCALE_THUMB_HORIZONTAL || type == MOZ_GTK_SCALE_THUMB_VERTICAL)
+        state->depressed = theme->isPressed(o);
+    else
+        state->depressed = false;
 }
 
 static bool paintMozillaGtkWidget(const RenderThemeGtk* theme, GtkThemeWidgetType type, RenderObject* o, const RenderObject::PaintInfo& i, const IntRect& rect)
@@ -301,7 +311,7 @@ static bool paintMozillaGtkWidget(const RenderThemeGtk* theme, GtkThemeWidgetTyp
         pixmap = adoptGRef(gdk_pixmap_new(0, rect.width(), rect.height(), gdk_visual_get_system()->depth));
 
     GtkWidgetState mozState;
-    setMozillaState(theme, &mozState, o);
+    setMozillaState(theme, type, o, &mozState);
 
     int flags;
 
@@ -530,14 +540,55 @@ bool RenderThemeGtk::paintSearchField(RenderObject* o, const RenderObject::Paint
     return paintTextField(o, i, rect);
 }
 
+bool RenderThemeGtk::paintSliderTrack(RenderObject* object, const RenderObject::PaintInfo& info, const IntRect& rect)
+{
+    ControlPart part = object->style()->appearance();
+    ASSERT(part == SliderHorizontalPart || part == SliderVerticalPart);
+
+    GtkThemeWidgetType gtkPart = MOZ_GTK_SCALE_HORIZONTAL;
+    if (part == SliderVerticalPart)
+        gtkPart = MOZ_GTK_SCALE_VERTICAL;
+
+    return paintMozillaGtkWidget(this, gtkPart, object, info, rect);
+}
+
+void RenderThemeGtk::adjustSliderTrackStyle(CSSStyleSelector*, RenderStyle* style, Element*) const
+{
+    style->setBoxShadow(0);
+}
+
+bool RenderThemeGtk::paintSliderThumb(RenderObject* object, const RenderObject::PaintInfo& info, const IntRect& rect)
+{
+    ControlPart part = object->style()->appearance();
+    ASSERT(part == SliderThumbHorizontalPart || part == SliderThumbVerticalPart);
+
+    GtkThemeWidgetType gtkPart = MOZ_GTK_SCALE_THUMB_HORIZONTAL;
+    if (part == SliderThumbVerticalPart)
+        gtkPart = MOZ_GTK_SCALE_THUMB_VERTICAL;
+
+    return paintMozillaGtkWidget(this, gtkPart, object, info, rect);
+}
+
+void RenderThemeGtk::adjustSliderThumbStyle(CSSStyleSelector*, RenderStyle* style, Element*) const
+{
+    style->setBoxShadow(0);
+}
+
 void RenderThemeGtk::adjustSliderThumbSize(RenderObject* o) const
 {
+    ControlPart part = o->style()->appearance();
 #if ENABLE(VIDEO)
-    if (o->style()->appearance() == MediaSliderThumbPart) {
+    if (part == MediaSliderThumbPart) {
         o->style()->setWidth(Length(m_mediaSliderThumbWidth, Fixed));
         o->style()->setHeight(Length(m_mediaSliderThumbHeight, Fixed));
-    }
+    } else
 #endif
+    if (part == SliderThumbHorizontalPart || part == SliderThumbVerticalPart) {
+        gint width, height;
+        moz_gtk_get_scalethumb_metrics(part == SliderThumbHorizontalPart ? GTK_ORIENTATION_HORIZONTAL : GTK_ORIENTATION_VERTICAL, &width, &height);
+        o->style()->setWidth(Length(width, Fixed));
+        o->style()->setHeight(Length(height, Fixed));
+    }
 }
 
 Color RenderThemeGtk::platformActiveSelectionBackgroundColor() const
